src/ui/snapshots/textsurfer__ui__chrome__tests__a_flash_notice_sits_in_front_of_the_page.snap
---
source: src/ui/chrome.rs
expression: "render(&view, Size { cols: 60, rows: 12 })"
---
 File  Navigate  View  Help            TextSurfer           
│┌ + ┐                                                     │
├──────────────────────────────────────────────────────────┤
│ ┌───┐ ┌───┐ ┌───┐ ┌───┐  ┌─ URL ───────────────────────┐ │
│ │ ‹ │ │ › │ │ ↻ │ │ ⌂ │  │https://example.com          │ │
│ └───┘ └───┘ └───┘ └───┘  └─────────────────────────────┘ │
├──────────────────────────────────────────────────────────┤
│hello                                                     ▲
│               ┌─────────────────────────┐                █
│               │ saved screenshots/x.png │                █
│               └─────────────────────────┘                ▼
Ready                                   https://example.com
