src/ui/snapshots/textsurfer__ui__chrome__tests__full_chrome_snapshot.snap
---
source: src/ui/chrome.rs
expression: "snapshot(Size { cols: 60, rows: 10 })"
---
 File  Navigate  View  Help            TextSurfer           
│┌ + ┐                                                     │
├──────────────────────────────────────────────────────────┤
│ ┌───┐ ┌───┐ ┌───┐ ┌───┐  ┌─ URL ───────────────────────┐ │
│ │ ‹ │ │ › │ │ ↻ │ │ ⌂ │  │https://example.com          │ │
│ └───┘ └───┘ └───┘ └───┘  └─────────────────────────────┘ │
├──────────────────────────────────────────────────────────┤
│hello                                                     █
│                                                          █
Ready                                   https://example.com
