src/ui/snapshots/textsurfer__ui__chrome__tests__standard_sized_chrome_snapshot.snap
---
source: src/ui/chrome.rs
expression: "snapshot(Size { cols: 80, rows: 24 })"
---
 File  Navigate  View  Help                      TextSurfer                     
│┌ + ┐                                                                         │
├──────────────────────────────────────────────────────────────────────────────┤
│ ┌───┐ ┌───┐ ┌───┐ ┌───┐  ┌─ URL ───────────────────────────────────────────┐ │
│ │ ‹ │ │ › │ │ ↻ │ │ ⌂ │  │https://example.com                              │ │
│ └───┘ └───┘ └───┘ └───┘  └─────────────────────────────────────────────────┘ │
├──────────────────────────────────────────────────────────────────────────────┤
│hello                                                                         ▲
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              █
│                                                                              ▼
Ready                                                       https://example.com
