src/ui/snapshots/textsurfer__ui__chrome__tests__tiny_window_still_draws_chrome.snap
---
source: src/ui/chrome.rs
expression: "snapshot(Size { cols: 40, rows: 4 })"
---
 File  Navigate  View  Help  TextSurfer 
│┌ + ┐                                 │
├──────────────────────────────────────┤
│ [‹] [›] [↻] [⌂]  URL: │https://exam│ │
